修改了忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ ll_env
 learning_log/__pycache__
 learning_logs/__pycache__
 learning_logs/migrations/__pycache__
+users/__pycache__
+users/migrations/__pycache__
